--- a/software.html
+++ b/software.html
@@ -61,7 +61,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Fitness Management System</h5>
                         <p class="card-text">An application that is based on Tkinter and database to store and track customer records.</p>
-                        <a href="projects/SD/fitness-management-system.html" class="btn btn-primary">View Details</a>
+                        <a href="projects/SD/fms.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -89,4 +89,5 @@
 </body>
 
 </html>
+
 
