--- a/projects/SD/fitness-management-system.html
+++ b/projects/SD/fitness-management-system.html
@@ -4,6 +4,7 @@
     <title>Fitness Management System - My Projects</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
         <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -78,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
