--- a/ai.html
+++ b/ai.html
@@ -56,6 +56,19 @@
     <!-- Project Cards Section -->
     <section class="container my-5">
         <div class="row g-4">
+
+        <!-- Project 0 -->
+            <div class="col-md-4">
+                <div class="card project-card h-100">
+                    <img src="assets/AI/dataprep-pro.png" class="card-img-top" alt="Data Pre-Processing Tool">
+                    <div class="card-body">
+                        <h5 class="card-title">The Ultimate Data Tool</h5>
+                        <p class="card-text">DataPrep Pro is a comprehensive data engineering tool designed to automate the painful 80% of data science: Data Cleaning and Preprocessing. </p>
+                        <a href="projects/AI/dataprep-pro.html" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            
             <!-- Project 1 -->
             <div class="col-md-4">
                 <div class="card project-card h-100">
@@ -136,5 +149,6 @@
     </footer>
 
 </body>
+
 
 </html>
