Revise project descriptions and update links in ai.html
Updated project details and links in the AI projects page.

--- a/ai.html
+++ b/ai.html
@@ -64,7 +64,7 @@
                     <div class="card-body">
                         <h5 class="card-title">The Ultimate Data Tool</h5>
                         <p class="card-text">DataPrep Pro is a comprehensive data engineering tool designed to automate the painful 80% of data science: Data Cleaning and Preprocessing. </p>
-                        <a href="projects/AI/dataprep-pro.html" class="btn btn-primary">View Details</a>
+                        <a href="https://sankalp-indish-dataprep-pro.streamlit.app/" target="_blank" class="btn btn-primary">View App</a> 
                     </div>
                 </div>
             </div>
@@ -152,3 +152,4 @@
 
 
 </html>
+
