--- a/fullstack.html
+++ b/fullstack.html
@@ -30,7 +30,7 @@
    <!-- Navbar -->
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="/index.html">All Projects</a>
+        <a class="navbar-brand" href="index.html">All Projects</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -172,3 +172,4 @@
 </body>
 
 </html>
+
