Update AI project details and add new project

--- a/ai.html
+++ b/ai.html
@@ -57,6 +57,18 @@
     <section class="container my-5">
         <div class="row g-4">
 
+        <!-- Project 0-1 -->
+            <div class="col-md-4">
+                <div class="card project-card h-100">
+                    <img src="assets/AI/osa-analyzer.png" class="card-img-top" alt="OSA Analysis tool">
+                    <div class="card-body">
+                        <h5 class="card-title">The OSA Analyses</h5>
+                        <p class="card-text">An AI-powered tool for OSA (Obstructive Sleep Apnea) detection using cephalometric analysis. </p>
+                        <a href="https://huggingface.co/spaces/sankalp-indish/osa-analyzer" target="_blank" class="btn btn-primary">View App</a> 
+                    </div>
+                </div>
+            </div>
+            
         <!-- Project 0 -->
             <div class="col-md-4">
                 <div class="card project-card h-100">
@@ -152,4 +164,5 @@
 
 
 </html>
+
 
