Revise project descriptions in ai.html
Updated project descriptions and enhanced content for clarity and detail.

--- a/ai.html
+++ b/ai.html
@@ -63,7 +63,7 @@
                     <img src="assets/AI/osa-analyzer.png" class="card-img-top" alt="OSA Analysis tool">
                     <div class="card-body">
                         <h5 class="card-title">The OSA Analyses</h5>
-                        <p class="card-text">An AI-powered tool for OSA (Obstructive Sleep Apnea) detection using cephalometric analysis. </p>
+                        <p class="card-text">This tool leverages Artificial Intelligence to detect Obstructive Sleep Apnea (OSA) through advanced cephalometric analysis. By automating the identification of 19 key anatomical landmarks on lateral cephalograms, it eliminates manual tracing errors. Users can effortlessly measure critical distances and angles, compare them against medical norms, and generate instant diagnostic predictions. Designed for clinicians and researchers, it provides a comprehensive PDF report with visual overlays for accurate assessment. This streamlines the diagnostic workflow, making OSA detection faster, more consistent, and scientifically precise.</p>
                         <a href="https://huggingface.co/spaces/sankalp-indish/osa-analyzer" target="_blank" class="btn btn-primary">View App</a> 
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <img src="assets/AI/dataprep-pro.png" class="card-img-top" alt="Data Pre-Processing Tool">
                     <div class="card-body">
                         <h5 class="card-title">The Ultimate Data Tool</h5>
-                        <p class="card-text">DataPrep Pro is a comprehensive data engineering tool designed to automate the painful 80% of data science: Data Cleaning and Preprocessing. </p>
+                        <p class="card-text">DataPrep Pro is a powerful data engineering solution built to automate the tedious 80% of the data science lifecycle: cleaning and preprocessing. It transforms raw, messy datasets into analysis-ready formats with a single click, handling missing values, duplicates, and outliers automatically. The tool features an intuitive interface for advanced feature engineering, type conversion, and exploratory data analysis (EDA). By reducing weeks of manual preparation into minutes, it allows data scientists to focus on modeling and insights. It is the ultimate accelerator for machine learning pipelines and analytics projects.</p>
                         <a href="https://sankalp-indish-dataprep-pro.streamlit.app/" target="_blank" class="btn btn-primary">View App</a> 
                     </div>
                 </div>
@@ -164,5 +164,6 @@
 
 
 </html>
+
 
 
