Add Expense Builder project to software.html

--- a/software.html
+++ b/software.html
@@ -54,6 +54,19 @@
     <!-- Project Cards Section -->
     <section class="container my-5">
         <div class="row g-4">
+
+            <!-- Project 0 -->
+            <div class="col-md-6">
+                <div class="card project-card h-100">
+                    <img src="assets/SD/eb.png" class="card-img-top" alt="Expense Builder">
+                    <div class="card-body">
+                        <h5 class="card-title">Expense Builder</h5>
+                        <p class="card-text">A Kotlin application that is under 5mb and is used to manage daily expenses and account transactions. Supports multiple currencies and is built with ease. Try it by downloading it now! Its completely safe and secure with latest security patches. Note that you need your mobile phone to run this application.</p>
+                        <a href="https://github.com/DevelopingGod/ExpenseBuilder/blob/main/app/release/app-release.apk" download="ExpenseBuilder.apk" class="btn btn-primary"> Download App </a>
+                    </div>
+                </div>
+            </div>
+            
             <!-- Project 1 -->
             <div class="col-md-6">
                 <div class="card project-card h-100">
@@ -89,5 +102,6 @@
 </body>
 
 </html>
+
 
 
