Enhance project descriptions in software.html
Updated project descriptions and added details for the Fitness Management System.

--- a/software.html
+++ b/software.html
@@ -74,7 +74,14 @@
                     <img src="assets/SD/fms.png" class="card-img-top" alt="Fitness Management System">
                     <div class="card-body">
                         <h5 class="card-title">Fitness Management System</h5>
-                        <p class="card-text">An application that is based on Tkinter and database to store and track customer records.</p>
+                        <p class="card-text">An application that is based on Tkinter and database to store and track customer records.
+                        This application is a robust customer relationship management tool built using Python's Tkinter library for the 
+                            graphical interface and a backend database to securely store and track client records. 
+                            It streamlines data management by providing a comprehensive system for Create, Read, Update, and Delete (CRUD) operations, 
+                            allowing users to interact with the database through intuitive forms rather than complex SQL commands. 
+                            To ensure efficiency and accuracy, the application features a Treeview widget for visualizing structured data, dynamic search functionality for 
+                            instant record retrieval, and built-in input validation to maintain data integrity. 
+                            </p>
                         <a href="projects/SD/fms.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
@@ -103,6 +110,7 @@
 </body>
 
 </html>
+
 
 
 
