Enhance software.html with project updates and links
Updated project details and added download links for the Expense Builder application.

--- a/software.html
+++ b/software.html
@@ -63,7 +63,10 @@
                         <h5 class="card-title">Expense Builder</h5>
                         <p class="card-text">A Kotlin application that is under 5mb and is used to manage daily expenses and account transactions. Supports multiple currencies and is built with ease. Try it by downloading it now! Its completely safe and secure with latest security patches. Note that you need your mobile phone to run this application.</p>
                       <a href="https://github.com/DevelopingGod/ExpenseBuilder/raw/refs/heads/main/app/release/app-release.apk" 
-                          class="btn btn-primary"> Download App </a>
+                          class="btn btn-success"> Download App </a>
+
+                    <a href="https://github.com/DevelopingGod/ExpenseBuilder" 
+               class="btn btn-secondary ms-2">App Info</a>
                     </div>
                 </div>
             </div>
@@ -110,6 +113,7 @@
 </body>
 
 </html>
+
 
 
 
