--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
-<!-- index.html (Home Page) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects by SI</title>
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-    <!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <style>
+        .project-card {
+            transition: transform 0.3s;
+        }
+        .project-card:hover {
+            transform: translateY(-10px);
+            cursor: pointer;
+        }
+    </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">Projects by SI</a>
@@ -28,7 +39,6 @@
         </div>
     </nav>
 
-    <!-- Header Section -->
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
             <h1>Hello, I'm Sankalp Indish</h1>
@@ -36,15 +46,12 @@
         </div>
     </header>
 
-    <!-- Project Categories Section -->
     <section class="container my-5" id="projects">
         <h2 class="text-center mb-4">Project Categories</h2>
         <div class="row g-4" id="project-cards">
-            <!-- Dynamic Cards will be loaded here -->
-        </div>
+            </div>
     </section>
 
-    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
             <p>&copy; 2025 Sankalp Indish - Data Scientist & AI Aspirant</p>
@@ -52,7 +59,6 @@
         </div>
     </footer>
 
-    <!-- Dynamic Card Script -->
     <script>
         const categories = [
             { name: 'Artificial Intelligence & Data Science', link: 'ai.html', icon: 'fa-brain' },
@@ -63,9 +69,10 @@
 
         const cardContainer = document.getElementById('project-cards');
         categories.forEach(category => {
+            // Added 'project-card' class to the div below
             cardContainer.innerHTML += `
                 <div class="col-md-6">
-                    <div class="card shadow-sm border-0 h-100">
+                    <div class="card shadow-sm border-0 h-100 project-card">
                         <div class="card-body text-center">
                             <i class="fas ${category.icon} fa-3x mb-3 text-primary"></i>
                             <h5 class="card-title">${category.name}</h5>
@@ -79,4 +86,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
