--- a/software.html
+++ b/software.html
@@ -62,11 +62,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Expense Builder</h5>
                         <p class="card-text">A Kotlin application that is under 5mb and is used to manage daily expenses and account transactions. Supports multiple currencies and is built with ease. Try it by downloading it now! Its completely safe and secure with latest security patches. Note that you need your mobile phone to run this application.</p>
-                      <a href="https://github.com/DevelopingGod/ExpenseBuilder/raw/refs/heads/main/app/release/app-release.apk" 
-                          class="btn btn-success"> Download App </a>
-
-                    <a href="https://github.com/DevelopingGod/ExpenseBuilder" 
-               class="btn btn-secondary ms-2">App Info</a>
+                      <a href="https://play.google.com/store/apps/details?id=com.sankalp.expensebuilder" 
+                          class="btn btn-success"> Download App (Play store)</a>
                     </div>
                 </div>
             </div>
@@ -113,6 +110,7 @@
 </body>
 
 </html>
+
 
 
 
